# glowing-octo-fishstick

./: .gitignore  README.md  db.py  db.sql  main.py  pyproject.toml  scrape.py
.github/workflows/: static.yml
hardware/: README.md  button.ino
scrapers/: models.py  spotify.py  ultimate_guitar.py  utils.py  wywrota.py
web/: chords.parquet  index.html  main.py  pyscript-main.json  pyscript-worker.json  pyscript.json  style.css  worker.py
